--- a/spa/public/manifest.json
+++ b/spa/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "kvg",
-  "short_name": "kvg",
+  "name": "OPNV-Live",
+  "short_name": "OPNV-Live",
   "icons": [
     {
       "src": "./img/icons/android-chrome-192x192.png",
@@ -15,6 +15,6 @@
   ],
   "start_url": "./",
   "display": "standalone",
-  "background_color": "#000000",
+  "background_color": "#FFFFFF",
   "theme_color": "#4DBA87"
 }
