--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ env:
 
 script:
   - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
-  - docker build -t $DOCKER_REPO .
+  - docker build --no-cache=true -t $DOCKER_REPO:$COMMIT .
 
 after_success:
   - docker login -u $DOCKER_USER -p $DOCKER_PASS
   - docker tag $DOCKER_REPO:$COMMIT $DOCKER_REPO:$TAG
   - docker tag $DOCKER_REPO:$COMMIT $DOCKER_REPO:travis-$TRAVIS_BUILD_NUMBER
-  - docker push $DOCKER_REPO:$TAG
+  - docker push $DOCKER_REPO
