--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ node_modules
 /dist
 
 # local env files
+.env
 .env.local
 .env.*.local
 
@@ -20,5 +21,4 @@ yarn-error.log*
 *.sln
 *.sw?
 
-docker-compose.yml
 spa/dist
