--- a/spa/package.json
+++ b/spa/package.json
@@ -14,6 +14,7 @@
     "reset-css": "^4.0.1",
     "socket.io-client": "^2.2.0",
     "vue": "^2.6.10",
+    "vue-matomo": "^3.9.1-2",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
