--- a/spa/public/manifest.json
+++ b/spa/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "OPNV-Live",
-  "short_name": "OPNV-Live",
+  "name": "Kiel Live",
+  "short_name": "Kiel Live",
   "icons": [
     {
       "src": "./img/icons/android-chrome-192x192.png",
