--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "express": "^4.17.1",
+    "hafas-client": "^4.2.1",
     "nahsh-hafas": "^1.0.0",
     "querystring": "^0.2.0",
     "socket.io": "^2.2.0"
