--- a/spa/public/manifest.json
+++ b/spa/public/manifest.json
@@ -16,5 +16,5 @@
   "start_url": "./",
   "display": "standalone",
   "background_color": "#FFFFFF",
-  "theme_color": "#4DBA87"
+  "theme_color": "#2c3e50"
 }
