--- a/spa/package.json
+++ b/spa/package.json
@@ -8,27 +8,29 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^2.6.5",
-    "lodash": "^4.17.13",
+    "core-js": "^3.6.0",
+    "lodash": "^4.17.15",
     "register-service-worker": "^1.6.2",
-    "reset-css": "^4.0.1",
-    "socket.io-client": "^2.2.0",
-    "vue": "^2.6.10",
-    "vue-matomo": "^3.9.1-2",
-    "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "reset-css": "^5.0.1",
+    "socket.io-client": "^2.3.0",
+    "vue": "^2.6.11",
+    "vue-matomo": "^3.12.0",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.7.0",
-    "@vue/cli-plugin-eslint": "^3.7.0",
-    "@vue/cli-plugin-pwa": "^3.7.0",
-    "@vue/cli-service": "^3.7.0",
-    "@vue/eslint-config-airbnb": "^4.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "sass": "^1.20.1",
-    "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.5.21"
+    "@vue/cli-plugin-babel": "^4.1.1",
+    "@vue/cli-plugin-eslint": "^4.1.1",
+    "@vue/cli-plugin-pwa": "^4.1.1",
+    "@vue/cli-plugin-router": "^4.1.1",
+    "@vue/cli-plugin-vuex": "^4.1.1",
+    "@vue/cli-service": "^4.1.1",
+    "@vue/eslint-config-airbnb": "^5.0.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^6.0.1",
+    "sass": "^1.24.0",
+    "sass-loader": "^8.0.0",
+    "vue-template-compiler": "^2.6.11"
   }
 }
