:sparkles: updated build steps

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
 PORT=8080
-NODE_ENV=development
-VUE_APP_MATOMO_URL=//stats.example.org/
-VUE_APP_MATOMO_SITE=1
+NODE_ENV=production
+APP_TITLE=Bus
+APP_MATOMO_URL=//stats.example.org/
+APP_MATOMO_SITE=1
