:bug: fixed docker build

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,11 +11,11 @@ RUN yarn run build
 FROM node:12.13-alpine
 WORKDIR /app
 RUN chown -R node:node /app
-COPY spa/package.json spa/yarn.lock ./
+COPY backend/package.json backend/yarn.lock ./
 USER node
 RUN yarn install --silent --frozen-lockfile --production
 COPY --chown=node:node docker/set-env-vars.sh docker/entrypoint.sh backend/ ./
-COPY --from=build-stage /app/dist/ dist/
+COPY --chown=node:node --from=build-stage /app/dist/ dist/
 EXPOSE 8080
-ENTRYPOINT [ "entrypoint.sh" ]
+ENTRYPOINT [ "./entrypoint.sh" ]
 CMD ["yarn", "run", "start"]
