--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,8 @@ WORKDIR /app
 COPY spa/package.json spa/yarn.lock ./
 RUN yarn install --silent
 COPY spa/ .
-ENV VUE_APP_VERSION=$(date)
+ARG VERSION
+ENV VUE_APP_VERSION=$VERSION
 RUN yarn run build
 
 #####################################################
