--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,12 @@ env:
   global:
   - COMMIT=${TRAVIS_COMMIT::8}
   - DOCKER_TAG=ci-$TRAVIS_BUILD_NUMBER
-  - VERSION=${TRAVIS_COMMIT::8}
+  - VERSION=$(date)-${COMMIT}
 
 script:
   - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
-  - export VERSION=$(date)-${COMMIT}
-  - docker build --no-cache=true --build-arg version=$VERSION -t $DOCKER_REPO:$DOCKER_TAG -f docker/Dockerfile .
+  - echo ${VERSION}
+  - docker build --no-cache=true --build-arg VERSION -t $DOCKER_REPO:$DOCKER_TAG -f docker/Dockerfile .
 
 after_success:
   - docker login -u $DOCKER_USER -p $DOCKER_PASS
