--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ branches:
 env:
   global:
   - COMMIT=${TRAVIS_COMMIT::8}
-  - DOCKER_TAG=ci-$TRAVIS_BUILD_NUMBER
-  - VERSION=$(date +%d.%m.%Y-%H:%M)-${COMMIT}
+  - DOCKER_TAG="ci-${TRAVIS_BUILD_NUMBER}"
+  - VERSION="$(date +%d.%m.%Y-%H:%M)-${COMMIT}"
 
 script:
   - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
