--- a/backend/package.json
+++ b/backend/package.json
@@ -6,13 +6,11 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint --ext .js --ignore-path ../.gitignore ."
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.2"
-  },
   "dependencies": {
     "axios": "^0.19.0",
     "express": "^4.17.1",
@@ -20,5 +18,11 @@
     "nahsh-hafas": "^1.0.0",
     "querystring": "^0.2.0",
     "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.19.1"
   }
 }
