--- a/spa/package.json
+++ b/spa/package.json
@@ -18,6 +18,8 @@
     "vue": "^2.6.11",
     "vue-matomo": "^3.12.0",
     "vue-router": "^3.1.3",
+    "vue2-leaflet": "^2.4.2",
+    "vue2-leaflet-rotatedmarker": "^1.0.9",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
