--- a/backend/package.json
+++ b/backend/package.json
@@ -14,15 +14,16 @@
   "dependencies": {
     "axios": "^0.19.0",
     "express": "^4.17.1",
+    "flat-cache": "^2.0.1",
     "hafas-client": "^4.8.0",
     "nahsh-hafas": "^1.0.0",
     "querystring": "^0.2.0",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.19.1"
+    "eslint-plugin-import": "^2.19.1",
+    "nodemon": "^2.0.2"
   }
 }
