--- a/spa/package.json
+++ b/spa/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.6.1",
     "leaflet": "^1.6.0",
+    "leaflet.locatecontrol": "^0.70.0",
     "lodash": "^4.17.15",
     "register-service-worker": "^1.6.2",
     "reset-css": "^5.0.1",
