--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,7 @@
     "axios": "^0.19.0",
     "express": "^4.17.1",
     "flat-cache": "^2.0.1",
-    "hafas-client": "^4.8.0",
-    "nahsh-hafas": "^1.0.0",
+    "geolocation-utils": "^1.2.2",
     "querystring": "^0.2.0",
     "socket.io": "^2.3.0"
   },
