add lint fix script

--- a/spa/package.json
+++ b/spa/package.json
@@ -6,7 +6,8 @@
     "config": "../docker/set-env-vars.sh ./public/env-config.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lint:fix": "yarn lint --fix"
   },
   "dependencies": {
     "core-js": "^3.6.1",
