--- a/spa/package.json
+++ b/spa/package.json
@@ -14,10 +14,12 @@
     "leaflet": "^1.6.0",
     "leaflet.locatecontrol": "^0.70.0",
     "lodash": "^4.17.15",
+    "mapbox-gl": "^1.8.0",
     "register-service-worker": "^1.6.2",
     "reset-css": "^5.0.1",
     "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
+    "vue-mapbox": "^0.4.1",
     "vue-matomo": "^3.12.0",
     "vue-router": "^3.1.3",
     "vue2-leaflet": "^2.4.2",
