optimized monorepo setup

--- a/spa/package.json
+++ b/spa/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "opnv-live",
+  "name": "@kiel-live/spa",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "config": "../docker/set-env-vars.sh ./public/env-config.js",
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
