--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "opnv-live-server",
+  "name": "@kiel-live/backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --ext .js --ignore-path ../.gitignore ."
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
     "express": "^4.17.1",
