--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "yarn workspace @kiel-live/backend run dev & yarn workspace @kiel-live/spa run dev",
     "build": "yarn workspaces run build",
-    "lint": "yarn workspaces run lint"
+    "lint": "yarn workspaces run lint",
+    "lint:fix": "yarn workspaces run lint --fix"
   }
 }
