--- a/spa/package.json
+++ b/spa/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.1",
+    "git-rev-sync": "^2.0.0",
     "lodash": "^4.17.15",
     "register-service-worker": "^1.6.2",
     "reset-css": "^5.0.1",
