--- a/spa/package.json
+++ b/spa/package.json
@@ -17,7 +17,9 @@
     "vue": "^2.6.11",
     "vue-matomo": "^3.12.0",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "workbox-core": "^5.0.0",
+    "workbox-precaching": "^5.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.2",
