--- a/spa/package.json
+++ b/spa/package.json
@@ -10,9 +10,11 @@
     "lint:fix": "yarn lint --fix"
   },
   "dependencies": {
+    "@derhuerst/query-overpass": "^2.0.0",
     "core-js": "^3.6.1",
     "lodash": "^4.17.15",
     "mapbox-gl": "^1.8.0",
+    "osmtogeojson": "^3.0.0-beta.4",
     "register-service-worker": "^1.6.2",
     "reset-css": "^5.0.1",
     "socket.io-client": "^2.3.0",
