--- a/spa/package.json
+++ b/spa/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "core-js": "^3.6.1",
     "lodash": "^4.17.15",
     "register-service-worker": "^1.6.2",
