--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,6 +3,7 @@ name: Docker Build
 on:
   push:
     tags:
+      - '*'
 
 jobs:
   lint:
@@ -17,25 +18,37 @@ jobs:
       - run: yarn --frozen-lockfile
       - run: yarn lint
 
-  buildx:
+  build:
     needs: lint
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Set up Docker Buildx
-        uses: crazy-max/ghaction-docker-buildx@v1
-        with:
-          version: latest
-      - name: Login to DockerHub Registry
-        run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-      - name: Run Buildx
-        run: |
-          docker buildx build \
-            --progress plain \
-            --platform linux/amd64,linux/arm/v7,linux/arm64 \
-            --tag ${{ secrets.DOCKERHUB_USERNAME }}/opnv-live:latest \
-            --push \
-            --build-arg "$(date +%d.%m.%Y-%H:%M)-${GITHUB_SHA::8}" \
-            --file docker/Dockerfile \
-            .
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Login to DockerHub Registry
+      run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+    - name: Build the Docker image
+      run: docker build --file docker/Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/opnv-live:latest --build-arg "$(date +%d.%m.%Y-%H:%M)-${GITHUB_SHA::8}" .
+    - name: Push image to DockerHub
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/opnv-live
+#  buildx:
+#    needs: lint
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v2
+#      - name: Set up Docker Buildx
+#        uses: crazy-max/ghaction-docker-buildx@v1
+#        with:
+#          version: latest
+#      - name: Login to DockerHub Registry
+#        run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+#      - name: Run Buildx
+#        run: |
+#          docker buildx build \
+#            --progress plain \
+#            --platform linux/amd64,linux/arm/v7,linux/arm64 \
+#            --tag ${{ secrets.DOCKERHUB_USERNAME }}/opnv-live:latest \
+#            --push \
+#            --build-arg "$(date +%d.%m.%Y-%H:%M)-${GITHUB_SHA::8}" \
+#            --file docker/Dockerfile \
+#            .
