--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,6 +9,16 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v1
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
       - name: Checkout
         uses: actions/checkout@v2
       - name: Set up Node
@@ -24,31 +34,20 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+    - name: Get yarn cache directory path
+      id: yarn-cache-dir-path
+      run: echo "::set-output name=dir::$(yarn cache dir)"
+    - uses: actions/cache@v1
+      id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+      with:
+        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-yarn-
     - name: Login to DockerHub Registry
       run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
     - name: Build the Docker image
-      run: docker build --file docker/Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/opnv-live:latest --build-arg "$(date +%d.%m.%Y-%H:%M)-${GITHUB_SHA::8}" .
+      run: docker build --file docker/Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/opnv-live:latest --build-arg VERSION="$(date +%d.%m.%Y-%H:%M)-${GITHUB_SHA::8}" .
     - name: Push image to DockerHub
       run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/opnv-live
-#  buildx:
-#    needs: lint
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v2
-#      - name: Set up Docker Buildx
-#        uses: crazy-max/ghaction-docker-buildx@v1
-#        with:
-#          version: latest
-#      - name: Login to DockerHub Registry
-#        run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-#      - name: Run Buildx
-#        run: |
-#          docker buildx build \
-#            --progress plain \
-#            --platform linux/amd64,linux/arm/v7,linux/arm64 \
-#            --tag ${{ secrets.DOCKERHUB_USERNAME }}/opnv-live:latest \
-#            --push \
-#            --build-arg "$(date +%d.%m.%Y-%H:%M)-${GITHUB_SHA::8}" \
-#            --file docker/Dockerfile \
-#            .
+
