add BACKEND_URL env var

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,8 @@
 PORT=8080
 NODE_ENV=production
+
+# App settings
 APP_TITLE=Bus
 APP_MATOMO_URL=//stats.example.org/
 APP_MATOMO_SITE=1
+# APP_BACKEND_URL=https://example.org
