--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,14 @@
 node_modules
 
 # local env files
-.env.local
+.env
 .env.*.local
 
 # Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
 
 # Editor directories and files
 .idea
