--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,10 +2,10 @@ FROM node:12.13-alpine as build-stage
 ARG VERSION
 ENV VUE_APP_VERSION=${VERSION}
 WORKDIR /app
-COPY spa/package.json ./spa/
+COPY packages/app/package.json ./packages/app/
 COPY package.json yarn.lock ./
 RUN yarn install --silent --frozen-lockfile
-COPY spa/ ./spa/
+COPY packages/app/ ./packages/app/
 RUN yarn run build
 
 #####################################################
@@ -15,11 +15,11 @@ ARG VERSION
 
 WORKDIR /app
 RUN chown -R node:node /app
-COPY backend/package.json yarn.lock ./
+COPY packages/backend/package.json yarn.lock ./
 USER node
 RUN yarn install --silent --frozen-lockfile --production
-COPY --chown=node:node docker/set-env-vars.sh docker/entrypoint.sh backend/ ./
-COPY --chown=node:node --from=build-stage /app/spa/dist/ dist/
+COPY --chown=node:node docker/set-env-vars.sh docker/entrypoint.sh packages/backend/ ./
+COPY --chown=node:node --from=build-stage /app/packages/app/dist/ dist/
 EXPOSE 8080
 ENTRYPOINT [ "./entrypoint.sh" ]
 CMD ["yarn", "run", "start"]
