--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "@kiel-live/spa",
+  "name": "@kiel-live/app",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
