--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This wep app allows you to view live updates of bus arrivals in Kiel.",
   "repository": "https://github.com/anbraten/opnv-live",
   "author": "Anbraten",
+  "private": true,
   "workspaces": [
     "packages/*"
   ],
