minor repo fixes

--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,15 @@
-PORT=8080
 NODE_ENV=production
 
 # App settings
+PORT=8080
 APP_TITLE=Bus
-APP_MATOMO_URL=//stats.example.org/
-APP_MATOMO_SITE=1
+# APP_MATOMO_URL=//stats.example.org/
+# APP_MATOMO_SITE=1
 # APP_BACKEND_URL=https://example.org
-APP_TILE_SERVER_URL=//example.com/styles/style-name/style.json
+# APP_TILE_SERVER_URL=//example.com/styles/style-name/style.json
+
+# Backend settings
+BACKEND_PORT=3000
+
+# Development settings
+# GH_TOKEN= # github token
