--- a/.env.sample
+++ b/.env.sample
@@ -5,6 +5,7 @@ PORT=8080
 APP_TITLE=Bus
 # APP_MATOMO_URL=//stats.example.org/
 # APP_MATOMO_SITE=1
+# APP_SENTRY_DSN=
 # APP_BACKEND_URL=https://example.org
 # APP_TILE_SERVER_URL=//example.com/styles/style-name/style.json
 
