--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "@sentry/browser": "^5.15.5",
+    "@sentry/integrations": "^5.15.5",
     "core-js": "^3.6.5",
     "lodash": "^4.17.15",
     "mapbox-gl": "^1.8.0",
