--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -9,36 +9,36 @@
     "lint:fix": "yarn lint --fix"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.14.0",
-    "@sentry/browser": "^5.19.2",
-    "@sentry/integrations": "^5.19.2",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@sentry/browser": "^5.27.1",
+    "@sentry/integrations": "^5.27.1",
     "core-js": "^3.6.5",
-    "lodash": "^4.17.19",
-    "mapbox-gl": "^1.11.1",
+    "lodash": "^4.17.20",
+    "mapbox-gl": "^1.12.0",
     "register-service-worker": "^1.7.1",
     "reset-css": "^5.0.1",
-    "socket.io-client": "^2.3.0",
-    "vue": "^2.6.11",
+    "socket.io-client": "^2.3.1",
+    "vue": "^2.6.12",
     "vue-mapbox": "^0.4.1",
-    "vue-matomo": "^3.12.0",
-    "vue-router": "^3.3.4",
+    "vue-matomo": "^3.14.0-0",
+    "vue-router": "^3.4.7",
     "vuex": "^3.5.1",
-    "workbox-core": "^5.1.3",
-    "workbox-precaching": "^5.1.3"
+    "workbox-core": "^5.1.4",
+    "workbox-precaching": "^5.1.4"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.4.6",
-    "@vue/cli-plugin-eslint": "^4.4.6",
-    "@vue/cli-plugin-pwa": "^4.4.6",
-    "@vue/cli-plugin-router": "^4.4.6",
-    "@vue/cli-plugin-vuex": "^4.4.6",
-    "@vue/cli-service": "^4.4.6",
+    "@vue/cli-plugin-babel": "^4.5.8",
+    "@vue/cli-plugin-eslint": "^4.5.8",
+    "@vue/cli-plugin-pwa": "^4.5.8",
+    "@vue/cli-plugin-router": "^4.5.8",
+    "@vue/cli-plugin-vuex": "^4.5.8",
+    "@vue/cli-service": "^4.5.8",
     "@vue/eslint-config-airbnb": "^5.1.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.5.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.26.10",
-    "sass-loader": "^9.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "eslint": "^7.11.0",
+    "eslint-plugin-vue": "^7.1.0",
+    "sass": "^1.27.0",
+    "sass-loader": "^10.0.4",
+    "vue-template-compiler": "^2.6.12"
   }
 }
