--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,10 @@
 {
-  "extends": [
-    "config:base"
-  ]
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": ["config:base", ":automergePatch"],
+  "dependencyDashboard": true,
+  "lockFileMaintenance": {
+    "enabled": true
+  },
+  "stabilityDays": 3,
+  "prCreation": "not-pending"
 }
