--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout 🛎️
         uses: actions/checkout@v2
       - uses: actions/cache@v1
         with:
@@ -27,11 +27,11 @@ jobs:
       - run: yarn --frozen-lockfile
       - run: yarn lint
 
-  build:
+  build-docker:
     needs: lint
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout 🛎️
         uses: actions/checkout@v2
       - uses: actions/cache@v1
         with:
@@ -46,3 +46,37 @@ jobs:
       - name: Push image to DockerHub
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/opnv-live
 
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2
+        with:
+          persist-credentials: false
+
+      - name: Install and Build 🔧
+        run: |
+          yarn --frozen-lockfile
+          yarn generate:config
+          yarn build
+        env:
+          APP_TITLE: Kiel Live
+          APP_MATOMO_URL: ${{ secrets.MATOMO_URL }}
+          APP_MATOMO_SITE: ${{ secrets.MATOMO_SITE }}
+          APP_SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
+          APP_BACKEND_URL: ${{ secrets.BACKEND_URL }}
+          APP_TILE_SERVER_URL: ${{ secrets.TILE_SERVER_URL }}
+
+      - name: Install SSH Client 🔑
+        uses: webfactory/ssh-agent@v0.4.1
+        with:
+          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@3.7.1
+        with:
+          SSH: true
+          REPOSITORY_NAME: kiel-live/kiel-live.github.io
+          BRANCH: master
+          FOLDER: packages/app/dist
+          CLEAN: true # Automatically remove deleted files from the deploy branch
