--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -23,6 +23,7 @@
     "vue-matomo": "^3.14.0-0",
     "vue-router": "^3.4.7",
     "vuex": "^3.5.1",
+    "webpack": "^4.0.0",
     "workbox-core": "^5.1.4",
     "workbox-precaching": "^5.1.4"
   },
@@ -36,6 +37,7 @@
     "@vue/eslint-config-airbnb": "^5.1.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.11.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-vue": "^7.1.0",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.4",
