--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kiel-live",
   "version": "1.0.0",
   "description": "This wep app allows you to view live updates of bus arrivals in Kiel.",
-  "repository": "https://github.com/anbraten/opnv-live",
+  "repository": "https://github.com/kiel-live/kiel-live",
   "author": "Anbraten",
   "private": true,
   "workspaces": [
