eslint use plugin:vue/recommended, enable vue/no-unused-properties

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "lint:fix": "yarn lint --fix"
+    "lint": "yarn lint:fix --no-fix",
+    "lint:fix": "vue-cli-service lint"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
