--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -23,7 +23,6 @@
     "vue-matomo": "3.14.0-0",
     "vue-router": "3.4.9",
     "vuex": "3.5.1",
-    "webpack": "5.4.0",
     "workbox-core": "5.1.4",
     "workbox-precaching": "5.1.4"
   },
@@ -43,6 +42,7 @@
     "sass-loader": "10.1.0",
     "stylelint": "^13.7.2",
     "stylelint-config-standard": "^20.0.0",
-    "vue-template-compiler": "2.6.12"
+    "vue-template-compiler": "2.6.12",
+    "webpack": "4.44.2"
   }
 }
