--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kiel-live",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "This wep app allows you to view live updates of bus arrivals in Kiel.",
   "repository": "https://github.com/kiel-live/kiel-live",
   "author": "Anbraten",
@@ -27,6 +27,16 @@
     "dotenv-cli": "4.0.0"
   },
   "devDependencies": {
-    "lerna": "3.22.1"
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
+    "eslint": "^7.16.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "lerna": "3.22.1",
+    "prettier": "^2.2.1",
+    "typescript": "^4.1.3"
   }
 }
