improve ts setup

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,13 +1,16 @@
 {
   "name": "@kiel-live/backend",
-  "version": "1.2.5",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon --watch src src/",
-    "start": "node src/",
-    "lint": "eslint --ext .js --ignore-path ../../.gitignore ."
+    "start": "nodemon --watch src src/",
+    "build": "yarn clean && tsc",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "typecheck": "tsc --noEmit",
+    "clean": "shx rm -rf dist/"
   },
   "dependencies": {
+    "@kiel-live/commons": "*",
     "axios": "0.21.1",
     "express": "4.17.1",
     "flat-cache": "3.0.4",
@@ -16,9 +19,7 @@
     "socket.io": "2.3.0"
   },
   "devDependencies": {
-    "eslint": "7.16.0",
-    "eslint-config-airbnb-base": "14.2.1",
-    "eslint-plugin-import": "2.22.1",
+    "@types/socket.io": "2.1.12",
     "nodemon": "2.0.6"
   }
 }
