--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,48 +1,15 @@
 {
   "name": "@kiel-live/app",
-  "version": "1.2.7",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint --no-fix && stylelint src",
-    "lint:fix": "vue-cli-service lint && stylelint src --fix"
+    "clean": "shx rm -rf dist/"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.15.1",
-    "@sentry/browser": "5.29.2",
-    "@sentry/integrations": "5.29.2",
-    "core-js": "3.8.1",
-    "lodash": "4.17.20",
-    "mapbox-gl": "1.13.0",
-    "register-service-worker": "1.7.2",
-    "reset-css": "5.0.1",
-    "socket.io-client": "2.3.1",
-    "vue": "2.6.12",
-    "vue-mapbox": "0.4.1",
-    "vue-matomo": "3.14.0-0",
-    "vue-router": "3.4.9",
-    "vuex": "3.6.0",
-    "workbox-core": "5.1.4",
-    "workbox-precaching": "5.1.4"
+    "@kiel-live/commons": "*",
+    "socket.io-client": "3.0.4"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "4.5.9",
-    "@vue/cli-plugin-eslint": "4.5.9",
-    "@vue/cli-plugin-pwa": "4.5.9",
-    "@vue/cli-plugin-router": "4.5.9",
-    "@vue/cli-plugin-vuex": "4.5.9",
-    "@vue/cli-service": "4.5.9",
-    "@vue/eslint-config-airbnb": "5.3.0",
-    "babel-eslint": "10.1.0",
-    "eslint": "7.16.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-vue": "7.4.0",
-    "sass": "1.29.0",
-    "sass-loader": "10.1.0",
-    "stylelint": "13.8.0",
-    "stylelint-config-standard": "20.0.0",
-    "vue-template-compiler": "2.6.12",
-    "webpack": "4.44.2"
+    "@types/socket.io-client": "1.4.34"
   }
 }
