--- a/config/tsconfig.base.json
+++ b/config/tsconfig.base.json
@@ -25,7 +25,7 @@
     "removeComments": true,
     "downlevelIteration": true,
     "paths": {
-      "@kiel-live/*": ["packages/*/src"]
+      "@kiel-live/*": ["./packages/*/src"]
     }
   },
 
