--- a/packages/commons/package.json
+++ b/packages/commons/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "tsc --watch",
     "build": "yarn clean && tsc",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint --report-unused-disable-directives --cache --ext .js,.ts .",
     "typecheck": "tsc --noEmit",
     "clean": "shx rm -rf dist/"
   },
