--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,17 +5,12 @@
   "scripts": {
     "start": "nodemon",
     "build": "yarn clean && esbuild src/index.ts --bundle --platform=node --outdir=dist/",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint --report-unused-disable-directives --cache --ext .js,.ts .",
     "typecheck": "tsc --noEmit",
     "clean": "shx rm -rf dist/"
   },
   "dependencies": {
     "@kiel-live/commons": "*",
-    "axios": "0.21.1",
-    "express": "4.17.1",
-    "flat-cache": "3.0.4",
-    "geolocation-utils": "1.2.3",
-    "querystring": "0.2.0",
     "socket.io": "3.0.4"
   },
   "devDependencies": {
