--- a/.env.sample
+++ b/.env.sample
@@ -2,15 +2,13 @@ NODE_ENV=production
 
 # App settings
 PORT=8080
-APP_TITLE=Bus
-# APP_MATOMO_URL=//stats.example.org/
-# APP_MATOMO_SITE=1
-# APP_SENTRY_DSN=
 # APP_BACKEND_URL=https://example.org
 # APP_TILE_SERVER_URL=//example.com/styles/style-name/style.json
 
-# Backend settings
-BACKEND_PORT=3000
+LOG=debug
 
-# Development settings
-# GH_TOKEN= # github token
+MANAGER_SERVER=localhost
+MANAGER_TOKEN=123
+
+COLLECTOR_SERVER=localhost
+COLLECTOR_TOKEN=123
