--- a/app/package.json
+++ b/app/package.json
@@ -1,47 +1,35 @@
 {
   "name": "@kiel-live/app",
-  "version": "1.2.7",
-  "private": true,
+  "author": "kiel-live.github.io Team",
+  "version": "0.0.0",
+  "engines": {
+    "node": "14"
+  },
   "scripts": {
-    "dev": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint --no-fix && stylelint src",
-    "lint:fix": "vue-cli-service lint && stylelint src --fix"
+    "start": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "serve": "vite preview",
+    "lint": "eslint --max-warnings 0 --ext .js,.ts,.vue,.json .",
+    "formatcheck": "prettier -c .",
+    "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.15.2",
-    "@sentry/browser": "5.29.2",
-    "@sentry/integrations": "5.29.2",
-    "core-js": "3.8.3",
-    "lodash": "4.17.20",
-    "mapbox-gl": "1.13.0",
-    "register-service-worker": "1.7.2",
-    "reset-css": "5.0.1",
-    "socket.io-client": "2.3.1",
-    "vue": "2.6.12",
-    "vue-mapbox": "0.4.1",
-    "vue-router": "3.4.9",
-    "vuex": "3.6.2",
-    "workbox-core": "5.1.4",
-    "workbox-precaching": "5.1.4"
+    "maplibre-gl": "v1.15.2",
+    "pinia": "^2.0.0-rc.0",
+    "vue": "^v3.2.0-beta.7",
+    "vue-router": "4.0.10"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "4.5.11",
-    "@vue/cli-plugin-eslint": "4.5.11",
-    "@vue/cli-plugin-pwa": "4.5.11",
-    "@vue/cli-plugin-router": "4.5.11",
-    "@vue/cli-plugin-vuex": "4.5.11",
-    "@vue/cli-service": "4.5.11",
-    "@vue/eslint-config-airbnb": "5.3.0",
-    "babel-eslint": "10.1.0",
-    "eslint": "7.16.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-vue": "7.4.1",
-    "sass": "1.29.0",
-    "sass-loader": "10.1.1",
-    "stylelint": "13.8.0",
-    "stylelint-config-standard": "20.0.0",
-    "vue-template-compiler": "2.6.12",
-    "webpack": "4.44.2"
+    "@iconify/json": "^1.1.382",
+    "@types/node": "^16.4.10",
+    "@vitejs/plugin-vue": "^1.3.0",
+    "@vue/compiler-sfc": "^3.1.5",
+    "prettier": "^2.3.2",
+    "typescript": "^4.3.5",
+    "unplugin-icons": "^0.7.0",
+    "vite": "^2.4.2",
+    "vite-plugin-windicss": "^1.2.7",
+    "vue-tsc": "^0.2.3",
+    "windicss": "3.1.6"
   }
 }
