--- a/nats-server.conf
+++ b/nats-server.conf
@@ -31,7 +31,7 @@ authorization {
   users = [
     {user: admin,   password: $NATS_TOKEN_ADMIN, permissions: $ADMIN}
     {user: manager,  password: $NATS_TOKEN_MANAGER, permissions: $MANAGER}
-    {user: collector,  password: NATS_TOKEN_COLLECTOR, permissions: $COLLECTOR}
+    {user: collector,  password: $NATS_TOKEN_COLLECTOR, permissions: $COLLECTOR}
     {user: consumer}
   ]
 }
