--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "maplibre-gl": "v1.15.2",
+    "nats.ws": "^1.3.0",
     "pinia": "^2.0.0-rc.0",
     "vue": "^v3.2.0-beta.7",
     "vue-router": "4.0.10"
