--- a/app/package.json
+++ b/app/package.json
@@ -7,8 +7,9 @@
   },
   "scripts": {
     "start": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vite build",
     "serve": "vite preview",
+    "deploy": "pnpm build && surge dist/ handsomely-ice.surge.sh",
     "lint": "eslint --max-warnings 0 --ext .js,.ts,.vue,.json .",
     "formatcheck": "prettier -c .",
     "typecheck": "vue-tsc --noEmit"
@@ -26,6 +27,7 @@
     "@vitejs/plugin-vue": "^1.3.0",
     "@vue/compiler-sfc": "^3.1.5",
     "prettier": "^2.3.2",
+    "surge": "^0.23.0",
     "typescript": "^4.3.5",
     "unplugin-icons": "^0.7.0",
     "vite": "^2.4.2",
