feat: replace caching with jetstream

--- a/nats-server.conf
+++ b/nats-server.conf
@@ -12,7 +12,7 @@ websocket {
 authorization {
   default_permissions = {
     subscribe = ["data.>", "_INBOX.>"]
-    publish = ["ctrl.subscribe", "ctrl.unsubscribe", "ctrl.cache.request"]
+    publish = ["ctrl.subscribe", "ctrl.unsubscribe", "ctrl.cache.request", "$JS.API.CONSUMER.CREATE.>", "$JS.API.STREAM.NAMES"]
     allow_responses = true
   }
   ADMIN = {
@@ -21,7 +21,7 @@ authorization {
   }
   MANAGER = {
     subscribe = ["ctrl.subscriptions", "ctrl.subscribe", "ctrl.unsubscribe", "ctrl.cache.request", "_INBOX.>", "data.>"]
-    publish = ["ctrl.subscriptions", "_INBOX.>"]
+    publish = ["ctrl.subscriptions", "_INBOX.>", "$JS.>"]
     # allow_responses = true
   }
   COLLECTOR = {
