--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   server:
-    image: nats:2.4-scratch
+    image: nats:2.6.4-scratch
     ports:
       - 4222:4222
       - 4223:4223
@@ -13,6 +13,7 @@ services:
       - NATS_TOKEN_COLLECTOR=${COLLECTOR_TOKEN}
     volumes:
       - ./nats-server.conf:/nats-server.conf
+    command: -js -c /nats-server.conf
   # transport:
   #   build:
   #     dockerfile: docker/Dockerfile
