chore: add launch config for ais collector

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,14 @@
       "mode": "debug",
       "program": "${workspaceRoot}/collectors/kvg/",
       "cwd": "${workspaceRoot}"
+    },
+    {
+      "name": "AIS collector",
+      "type": "go",
+      "request": "launch",
+      "mode": "debug",
+      "program": "${workspaceRoot}/collectors/ais/",
+      "cwd": "${workspaceRoot}"
     }
   ]
 }
