--- a/nats-server.conf
+++ b/nats-server.conf
@@ -25,8 +25,8 @@ authorization {
     # allow_responses = true
   }
   COLLECTOR = {
-    subscribe = ["ctrl.subscriptions", "_INBOX.>", "data.>"]
-    publish = ["ctrl.cache.request", "ctrl.subscribe", "ctrl.unsubscribe", "data.>"]
+    subscribe = ["ctrl.subscriptions", "_INBOX.>", "data.>", "$JS.EVENT.ADVISORY.CONSUMER.>"]
+    publish = ["ctrl.cache.request", "ctrl.subscribe", "ctrl.unsubscribe", "data.>", "$JS.API.CONSUMER.INFO.>", "$JS.API.CONSUMER.LIST.>"]
   }
   users = [
     {user: admin,   password: $NATS_TOKEN_ADMIN, permissions: $ADMIN}
