--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "dayjs": "1.10.7",
     "maplibre-gl": "v1.15.2",
     "nats.ws": "1.5.0",
     "pinia": "^2.0.0-rc.0",
