--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -8,6 +8,7 @@
     "sourceMap": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "lib": ["esnext", "dom"],
     "paths": {
       "~/*": ["./src/*"]
