--- a/app/package.json
+++ b/app/package.json
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "@iconify/json": "^1.1.382",
-    "@types/node": "^16.4.10",
+    "@types/node": "16.11.11",
     "@vitejs/plugin-vue": "^1.3.0",
     "@vue/compiler-sfc": "^3.1.5",
     "prettier": "^2.3.2",
@@ -32,7 +32,7 @@
     "unplugin-icons": "^0.7.0",
     "vite": "^2.4.2",
     "vite-plugin-windicss": "^1.2.7",
-    "vue-tsc": "^0.2.3",
+    "vue-tsc": "0.29.8",
     "windicss": "3.1.6"
   }
 }
