--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -9,6 +9,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
     "lib": ["esnext", "dom"],
     "paths": {
       "~/*": ["./src/*"]
