--- a/app/package.json
+++ b/app/package.json
@@ -25,14 +25,14 @@
   },
   "devDependencies": {
     "@iconify/json": "1.1.438",
-    "@types/geojson": "^7946.0.8",
+    "@types/geojson": "7946.0.8",
     "@types/node": "16.11.11",
     "@typescript-eslint/eslint-plugin": "5.5.0",
     "@typescript-eslint/parser": "5.5.0",
     "@vitejs/plugin-vue": "1.10.1",
     "@vue/compiler-sfc": "3.2.23",
     "eslint": "8.4.0",
-    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "16.1.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.25.3",
