--- a/nats-server.conf
+++ b/nats-server.conf
@@ -37,3 +37,9 @@ authorization {
 }
 
 no_auth_user: "consumer"
+
+jetstream {
+    store_dir: /data/jetstream
+    max_mem: 1G
+    max_file: 10G
+}
