--- a/app/package.json
+++ b/app/package.json
@@ -47,6 +47,7 @@
     "unplugin-icons": "0.12.22",
     "unplugin-vue-components": "0.17.2",
     "vite": "2.6.14",
+    "vite-plugin-pwa": "0.11.11",
     "vite-plugin-windicss": "1.5.4",
     "vue-tsc": "0.29.8",
     "windicss": "3.2.1"
