fix: add workbox-window dependency
fixes the build see https://github.com/antfu/vite-plugin-pwa/issues/89

--- a/app/package.json
+++ b/app/package.json
@@ -49,6 +49,7 @@
     "vite-plugin-windicss": "1.5.4",
     "vue-eslint-parser": "8.0.1",
     "vue-tsc": "0.29.8",
-    "windicss": "3.4.0"
+    "windicss": "3.4.0",
+    "workbox-window": "6.4.2"
   }
 }
