--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -10,6 +10,8 @@ on:
     types: [opened, synchronize, reopened, closed]
     branches:
       - main
+    paths:
+      - app/**
 
 jobs:
   app:
@@ -21,7 +23,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '16'
 
       - name: Cache pnpm modules
         uses: actions/cache@v2
