fix: correct workflow step condition

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -28,4 +28,4 @@ jobs:
 
       - name: Push image to DockerHub
         run: docker push ${{ env.DOCKERHUB_USERNAME }}/kiel-live-kvg:latest
-        if: "github.event.ref_type == 'tag'"
+        if: "github.ref_type == 'tag'"
