--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -56,13 +56,13 @@ jobs:
 
       - name: Install SSH Client 🔑
         uses: webfactory/ssh-agent@v0.4.1
-        if: "github.event.ref_type == 'tag'"
+        if: "github.ref_type == 'tag'"
         with:
           ssh-private-key: ${{ secrets.DEPLOY_KEY }}
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
-        if: "github.event.ref_type == 'tag'"
+        if: "github.ref_type == 'tag'"
         with:
           SSH: true
           REPOSITORY_NAME: kiel-live/kiel-live.github.io
