add path checks

--- a/.github/workflows/check-go.yml
+++ b/.github/workflows/check-go.yml
@@ -9,6 +9,7 @@ on:
       - collectors/**
       - manager/**
       - protocol/**
+      - .github/workflows/check-go.yml
   push:
     branches:
       - main
