docs: add some development docs

--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,4 @@
-NODE_ENV=production
-
-# App settings
-PORT=8080
-# APP_BACKEND_URL=https://example.org
-# APP_TILE_SERVER_URL=//example.com/styles/style-name/style.json
-
+# Nats & collector settings
 LOG=debug
 
 MANAGER_SERVER=localhost
@@ -15,4 +9,6 @@ COLLECTOR_TOKEN=123
 
 ADMIN_TOKEN=123
 
+# PWA settings
+NODE_ENV=production
 VITE_NATS_URL=ws://localhost:4223/
