--- a/docs/docker-compose.yml
+++ b/docs/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - NATS_TOKEN_MANAGER=${MANAGER_TOKEN}
       - NATS_TOKEN_COLLECTOR=${COLLECTOR_TOKEN}
     volumes:
-      - ./nats-server.conf:/nats-server.conf
+      - ./nats/nats-server.conf:/nats-server.conf
     command: -c /nats-server.conf
     restart: always
     networks:
@@ -27,8 +27,8 @@ services:
       - NATS_USER=admin
       - NATS_PASSWORD=${ADMIN_TOKEN}
     volumes:
-      - ./setup.sh:/setup.sh
-      - ./stream.json:/stream.json
+      - ./nats/setup.sh:/setup.sh
+      - ./nats/stream.json:/stream.json
     command: /setup.sh
     restart: on-failure
     depends_on:
