--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - NATS_TOKEN_MANAGER=${MANAGER_TOKEN}
       - NATS_TOKEN_COLLECTOR=${COLLECTOR_TOKEN}
     volumes:
-      - ./nats-server.conf:/nats-server.conf
+      - ./nats/nats-server.conf:/nats-server.conf
     command: -c /nats-server.conf
   setup:
     image: natsio/nats-box:0.11.0
@@ -21,8 +21,8 @@ services:
       - NATS_USER=admin
       - NATS_PASSWORD=${ADMIN_TOKEN}
     volumes:
-      - ./setup.sh:/setup.sh
-      - ./stream.json:/stream.json
+      - ./nats/setup.sh:/setup.sh
+      - ./nats/stream.json:/stream.json
     command: /setup.sh
     depends_on:
       - server
