change sample tokens to strings

--- a/.env.sample
+++ b/.env.sample
@@ -2,12 +2,12 @@
 LOG=debug
 
 MANAGER_SERVER=localhost
-MANAGER_TOKEN=123
+MANAGER_TOKEN=secret
 
 COLLECTOR_SERVER=localhost
-COLLECTOR_TOKEN=123
+COLLECTOR_TOKEN=secret
 
-ADMIN_TOKEN=123
+ADMIN_TOKEN=secret
 
 # PWA settings
 NODE_ENV=production
